
2001-08-14  jeff b  <jeff@univrel.pr.uconn.edu>

	* acconfig.h, configure.in, etc/afpd/directory.c,
	etc/afpd/enumerate.c, etc/afpd/file.c, etc/afpd/file.h,
	etc/afpd/filedir.c, etc/afpd/fork.c, etc/afpd/volume.c,
	etc/afpd/volume.h, libatalk/Makefile.am,
	libatalk/cnid/cnid_add.c, libatalk/cnid/cnid_close.c,
	libatalk/cnid/cnid_delete.c, libatalk/cnid/cnid_lookup.c,
	libatalk/cnid/cnid_nextid.c, libatalk/cnid/cnid_open.c,
	libatalk/cnid/cnid_private.h, libatalk/cnid/cnid_update.c:
	DID database and reincluding libatalk/cnid back into
	compiled tree (Uwe Hees)

	* libatalk/cnid/.cvsignore: updated .cvsignore list for
	CNID patch (Jeff)

2001-08-09  Sam Noble <ns@shadow.org>

	* configure.in, acconfig.h: Merged a patch from meeroh@mit.edu
	to fix the kerberos uam build process.

2001-08-08  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/papd/session.c: prevents papd client from aborting
	during the submission of a print job, therefore preventing
	the job from hanging on the Mac (Michael Boers)

2001-07-10  Lance Levsen  <lance@iworks.pwgroup.ca>

	* man/man8/papd.8.tmpl: Fixed ftp URI for Adobe's PPD files.
	
2001-06-30  andy m  <morgan@orst.edu>

	* etc/papd/ppd.c: "unquote" ppd values by removing leading
	and trailing quote character. This should fix bug #426141.

2001-06-27  jeff b  <jeff@univrel.pr.uconn.edu>

	* many, many, files: more malformed ifdef correction, nicer
	comments, etc, etc, etc (Jeff)

	* etc/afpd/directory.c, etc/afpd/uid.c, etc/afpd/uid.h: fixes
	for force-uidgid to compile properly. haven't tested it, but
	no more compile errors. (Jeff)

2001-06-27  uwe hees <hees@viva.de>

	* etc/uams/uams_guest.c: fixed a typo.

2001-06-26  andy m  <morgan@orst.edu>

	* etc/papd/file.c: modified markline() to return 1 instead
	of *linelength for successful completion. This should fix
	the remaining binary printing problems in papd.  Thanks go
	out to Dave Arnold <darn0ld@home.com> for getting me thinking
	about the markline function.
