@@ -1,3 +1,9 @@
+2001-08-14  Sam Noble <ns@shadow.org>
+
+	* etc/afpd/directory.c: in afp_mapname and afp_mapid
+	convert uid/gid to/from network byte order before actually
+	using.  This should hopefully fix a long-standing bug in
+	the admin functionality.
 
 2001-08-14  jeff b  <jeff@univrel.pr.uconn.edu>
 
